--- a/views/users/user_login.html
+++ b/views/users/user_login.html
@@ -23,7 +23,7 @@
             <label class="control-label col-sm-2" for="passwordR">Password:</label>
             <div class="col-sm-12">
                 <input id="passwordR" type="password" class="form-control" name="password"
-                       placeholder="contraseña" required="true"/>
+                       placeholder="Contraseña" required="true"/>
             </div>
             <div class="centeredText">
                 <a class="contrasenaOlvidarLink" data-toggle="modal" data-target="#modeloRecuperarContrasena">¿Has
@@ -43,7 +43,7 @@
                 <form class="form-horizontal" method="post" action="/recover">
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h3 class="modal-title">Introduzca su correo electrónico</h3>
+                        <h2 class="modal-title">Introduzca su correo electrónico</h2>
                     </div>
 
                     <!-- Modal body -->
