--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -274,14 +274,14 @@ dt {
 }
 
 .message-date-pr {
-    font-size: 0.5em;
+    font-size: 0.8em;
     margin-left: auto;
     margin-right: 0;
 }
 
 
 .input-chat {
-    margin-top: 2em;
+    margin-top: 0;
 }
 
 .message-container {
@@ -403,4 +403,34 @@ button.custom-base-style:hover {
 
 .modal-backdrop{
     z-index: 0;
+}
+
+.btn-success {
+    background-color: #0E611A;
+}
+
+.header-fixed {
+    width: 15%;
+}
+
+.input-label{
+    font-size: 0.8em;
+    margin-bottom: 0;
+    margin-top: 1em;
+}
+
+.badge-primary{
+    background-color: #004A8F
+}
+
+.badge-info{
+background-color: #0B5560;
+}
+
+.badge-success{
+    background-color: #0E611A;
+}
+
+.spaced-field{
+    margin-top: 5em;
 }
